# IZ2_Gallaann

./: CMakeLists.txt  README.md  input_file.txt  main.c
.github/workflows/: CI.yml
gtests/: CMakeLists.txt  gtests.cpp
src/: CMakeLists.txt
src/realisation/: CMakeLists.txt  realisation.h
src/realisation/consistent/: CMakeLists.txt  realisation.c
src/realisation/parallel/: CMakeLists.txt  realisation.c
src/storage/: CMakeLists.txt  storage.c  storage.h
src/two_points/: CMakeLists.txt  two_points.c  two_points.h
